updated app store link

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             <div class="app-highlight">
                 <div class="app-title">Tempo Coffee Timer</div>
                 <p>A precision timer application for coffee brewing enthusiasts, designed to enhance the pour-over experience.</p>
-                <a href="https://apps.apple.com/au/app/tempo-coffee-timer/id6739330299" target="_blank" rel="noopener noreferrer" class="app-store-link">
+                <a href="https://apps.apple.com/au/app/tempo-coffee-timer/id6739330299?platform=iphone" target="_blank" rel="noopener noreferrer" class="app-store-link">
                     <span class="app-store-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
